# ct600

./: .gitignore  Makefile  README.md  TEST_STRATEGY.md  all-values.yaml  config-prod.json  config-test.json  config-til.json  config.json  many-values.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yaml  pull-request.yaml
ct600/: __main__.py  cli.py  computations.py  config.py  constants.py  corptax.py  exceptions.py  file_operations.py  govtalk.py  submission.py  test_service.py
schema/: CT-2014-v1-991.xsd
schema/HMRC-CT-2014-v1-96-20210218/: CT-2014-v1-96.sch  CT-2014-v1-96.xslt
schema/HMRC-CT-2014-v1-96-20210218/HMRC-CT-2014-v1-95-To-v1-96.diffs/: CT.sch-2014-v1-95-To-v1-96.diff  CT.xsd-2014-v1-95-To-v1-96.diff  envelope.xsd-v2-0-To-v2-0.diff
scripts/: corptax-test-service  ct600
tests/: conftest.py  requirements.txt
tests/contract/: test_api_behavior.py  test_data_formats.py  test_govtalk_schema_compliance.py
tests/e2e/: test_cli_workflows.py
tests/fixtures/configs/: test_config.json  test_form_values.yaml
tests/integration/: test_submission_workflow.py
tests/unit/: test_cli.py  test_computations.py  test_config.py  test_constants.py  test_corptax.py  test_exceptions.py  test_file_operations.py  test_govtalk.py  test_govtalk_detailed.py  test_irmark.py  test_ixbrl.py  test_submission.py
