[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct600"
dynamic = ["version"]
authors = [
    {name = "Cybermaggedon", email = "mark@cyberapocalypse.co.uk"},
]
description = "UK HMRC Corporation Tax submission"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "py-dmidecode",
    "requests",
    "ixbrl-parse",
    "pyaml",
]

[project.urls]
Homepage = "https://github.com/cybermaggedon/ct600"
Download = "https://github.com/cybermaggedon/ct600/archive/refs/tags/v1.4.0.tar.gz"

[project.scripts]
ct600 = "ct600.__main__:main"
corptax-test-service = "ct600.test_service:main"

[tool.setuptools.packages.find]
include = ["ct600*"]

[tool.setuptools.dynamic]
version = {attr = "ct600.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

